Fix world info on tab